// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provision/DatabaseAccount/DatabaseAccountDetailModal render click copy password 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-rva8cb"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  账号详情
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      连接信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接账号名
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            test1
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接域
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            %
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接密码
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="css-1sg2lsz"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="rect-border-wrapper css-1iiq8r2"
                                  >
                                    <svg
                                      fill="none"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M11.3333 9.33333H8.43906C7.88992 10.8869 6.40828 12 4.66666 12C2.45752 12 0.666656 10.2091 0.666656 8C0.666656 5.79086 2.45752 4 4.66666 4C6.40828 4 7.88992 5.11308 8.43906 6.66667H15.3333V9.33333H14V12H11.3333V9.33333ZM4.66666 9.33333C5.40304 9.33333 5.99999 8.7364 5.99999 8C5.99999 7.2636 5.40304 6.66667 4.66666 6.66667C3.93028 6.66667 3.33332 7.2636 3.33332 8C3.33332 8.7364 3.93028 9.33333 4.66666 9.33333Z"
                                        fill="#8A8F99"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                              <span
                                class="ant-typography css-dev-only-do-not-override-txh9fw"
                              >
                                <div
                                  aria-label="Copied"
                                  class="ant-typography-copy ant-typography-copy-success"
                                  role="button"
                                  style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                                  tabindex="0"
                                >
                                  <span
                                    aria-label="check"
                                    class="anticon anticon-check"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="check"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          本次密码生成时间
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            2024-06-03 13:24:26
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          密码有效期
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            2024-07-03 13:24:26
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <button
                              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                              type="button"
                            >
                              <span>
                                复制连接串
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      数据权限
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          数据源
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            test
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          数据对象
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                            >
                              database-1.table-1
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          数据操作
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                            >
                              查询
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          原始权限
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-31ndgd css-dev-only-do-not-override-txh9fw"
                            >
                              SELECT, INSERT, UPDATE, CREATE, REFERENCES, INDEX, ALTER, CREATE VIEW, SHOW VIEW, TRIGGER ON \`test_db\`.*
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      授权信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          授权成员
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <div
                              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <span
                                  class="ant-avatar ant-avatar-sm ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
                                >
                                  <span
                                    class="ant-avatar-string"
                                    style="transform: scale(1) translateX(-50%);"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      全文复制
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`provision/DatabaseAccount/DatabaseAccountDetailModal render init snap 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-rva8cb"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  账号详情
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      连接信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接账号名
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            test1
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接域
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            %
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          连接密码
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="css-1sg2lsz"
                            >
                              <div
                                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                              >
                                <div
                                  class="ant-space-item"
                                >
                                  <span
                                    class="rect-border-wrapper css-1iiq8r2"
                                  >
                                    <svg
                                      fill="none"
                                      height="16"
                                      viewBox="0 0 16 16"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M11.3333 9.33333H8.43906C7.88992 10.8869 6.40828 12 4.66666 12C2.45752 12 0.666656 10.2091 0.666656 8C0.666656 5.79086 2.45752 4 4.66666 4C6.40828 4 7.88992 5.11308 8.43906 6.66667H15.3333V9.33333H14V12H11.3333V9.33333ZM4.66666 9.33333C5.40304 9.33333 5.99999 8.7364 5.99999 8C5.99999 7.2636 5.40304 6.66667 4.66666 6.66667C3.93028 6.66667 3.33332 7.2636 3.33332 8C3.33332 8.7364 3.93028 9.33333 4.66666 9.33333Z"
                                        fill="#8A8F99"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                              <span
                                class="ant-typography css-dev-only-do-not-override-txh9fw"
                              >
                                <div
                                  aria-label="Copy"
                                  class="ant-typography-copy"
                                  role="button"
                                  style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                                  tabindex="0"
                                >
                                  <span
                                    aria-label="copy"
                                    class="anticon anticon-copy"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="copy"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          本次密码生成时间
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            2024-06-03 13:24:26
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          密码有效期
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            2024-07-03 13:24:26
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <button
                              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-sm basic-button-wrapper css-geipcv"
                              type="button"
                            >
                              <span>
                                复制连接串
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      数据权限
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          数据源
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            test
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          数据对象
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                            >
                              database-1.table-1
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          数据操作
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-16jha8l css-dev-only-do-not-override-txh9fw"
                            >
                              查询
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          原始权限
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-default-tag-wrapper css-31ndgd css-dev-only-do-not-override-txh9fw"
                            >
                              SELECT, INSERT, UPDATE, CREATE, REFERENCES, INDEX, ALTER, CREATE VIEW, SHOW VIEW, TRIGGER ON \`test_db\`.*
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="audit-info-wrapper"
                  >
                    <div
                      class="audit-info-title"
                    >
                      授权信息
                    </div>
                    <div
                      class="audit-card"
                    >
                      <div
                        class="css-2kjdpz"
                      >
                        <div
                          class="audit-info-item-label"
                        >
                          授权成员
                        </div>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-info-item-value"
                          style="flex-wrap: wrap; margin-bottom: -8px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 8px;"
                          >
                            <div
                              class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <span
                                  class="ant-avatar ant-avatar-sm ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
                                >
                                  <span
                                    class="ant-avatar-string"
                                    style="transform: scale(1) translateX(-50%);"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      全文复制
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
